<resources>
    <string name="app_name">20110595_TranQuocTuan</string>
    <string name="information">Thông tin Sinh Viên</string>
    <string name="myname">Họ Tên</string>
    <string name="mssv">MSSV</string>
    <string name="address">Địa Chỉ</string>
    <string name="phoneNumber">Số Điện Thoại</string>
    <string name="account">Tài khoản: </string>
    <string name="nameaccount"></string>
    <string name="helloAndroid">Chào mừng bạn đến với Android</string>

    <string name="username">User Name </string>
    <string name="phoneNo">Phone No </string>
    <string name="emailId">Email ID </string>
</resources>