<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center|left"
            android:fontFamily="monospace"
            android:text="@string/username"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#eae7e7"
            android:hint="User Name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#673AB7"
            android:textSize="20sp"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPhoneNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center|left"
            android:fontFamily="monospace"
            android:text="@string/phoneNo"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#eae7e7"
            android:hint="Phone No"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#673AB7"
            android:textSize="20sp"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewEmailId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center|left"
            android:fontFamily="monospace"
            android:text="@string/emailId"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#eae7e7"
            android:hint="Email ID"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#673AB7"
            android:textSize="20sp"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="CANCEL"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:id="@+id/buttonCancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="SUBMIT"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:id="@+id/buttonSubmit" />
    </LinearLayout>
</LinearLayout>