<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/informationStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:minWidth="0px"
        android:minHeight="100px"
        android:text="@string/information"
        android:editable="true"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="600px"
        android:minHeight="0px"
        android:text="@string/myname"
        android:textColor="@color/red"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#eae7e7"
        android:cursorVisible="true"
        android:hint="Nhập họ tên của bạn?"
        android:capitalize="characters"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHighlight="#19B4FA"
        android:textColorHint="#673AB7"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/textViewMSSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="600px"
        android:minHeight="0px"
        android:text="@string/mssv"
        android:textColor="@color/red"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <EditText
        android:id="@+id/editTextMSSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:background="#eae7e7"
        android:cursorVisible="true"
        android:hint="Nhập MSSV của bạn?"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHighlight="#19B4FA"
        android:textColorHint="#673AB7"
        android:textSize="20sp"
        android:typeface="serif"
        android:maxLength="8"
        app:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="600px"
        android:minHeight="0px"
        android:text="@string/address"
        android:textColor="@color/red"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:background="#eae7e7"
        android:cursorVisible="true"
        android:gravity="left|top"
        android:hint="Nhập địa chỉ của bạn?"
        android:capitalize="sentences"
        android:lines="2"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHighlight="#19B4FA"
        android:textColorHint="#673AB7"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="600px"
        android:minHeight="0px"
        android:text="@string/phoneNumber"
        android:textColor="@color/red"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:background="#eae7e7"
        android:cursorVisible="true"
        android:hint="Nhập số điện thoại của bạn?"
        android:phoneNumber="true"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHighlight="#19B4FA"
        android:textColorHint="#673AB7"
        android:textSize="20sp"
        android:typeface="serif"
        android:maxLength="11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/textViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:inputType="textCapWords"
        android:maxWidth="200dp"
        android:maxHeight="0dp"
        android:text="@string/account"
        android:textColor="@color/teal_200"
        android:textIsSelectable="true"
        android:editable="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/textViewNameAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#eae7e7"
        android:gravity="center"
        android:hint="Nhập tên tài khoản của bạn?"
        android:inputType="text"
        android:maxWidth="300dp"
        android:maxHeight="0dp"
        android:padding="10dp"
        android:text="@string/nameaccount"
        android:textColor="@color/red"
        android:textIsSelectable="true"
        android:editable="true"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="532dp"
        android:cursorVisible="true"
        android:hint="Nhập username?"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHighlight="#19B4FA"
        android:textColorHint="#673AB7"
        android:textSize="15sp"
        android:typeface="serif"
        android:maxLength="20"
        app:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="580dp"
        android:cursorVisible="true"
        android:hint="Nhập password?"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHighlight="#19B4FA"
        android:textColorHint="#673AB7"
        android:textSize="15sp"
        android:typeface="serif"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textCapSentences"
        android:text="Click vào đây"
        android:minHeight="140px"
        android:minWidth="400px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
